# data-downloader

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  STATUS.md  pyproject.toml
.github/: SECRETS.md  branch-protection.md
.github/workflows/: release.yml  test.yml
agents/: architect.md  dev.md  devops.md  frontend-dev.md  perf-engineer.md  pm.md  profitdll-specialist.md  qa.md  storage-engineer.md  ux-design-expert.md
benchmarks/: README.md  _common.py  bench_boot_cleanup.py  bench_callback_to_disk.py  bench_chunking.py  bench_dedup.py  bench_log_overhead.py  bench_multi_symbol.py  bench_parquet_pareto.py  bench_parquet_read.py  bench_parquet_read_filtered.py  bench_parquet_write.py  bench_sqlite_profiles.py  bench_subprocess_spawn.py
benchmarks/fixtures/: mock_dll.py  synthetic_trades.py
benchmarks/results/: README.md  bench_callback_to_disk-2026-05-04-50f3368-dirty.json  bench_chunking-2026-05-04-50f3368-dirty.json  bench_parquet_write-2026-05-13-bf1448e.json
docs/: ARCHITECTURE.md  INVARIANTS.md  MANIFEST.md  ROADMAP.md  ROLES.md  WORKFLOW.md
docs/adr/: ADR-001-python-runtime.md  ADR-002-storage-stack.md  ADR-003-front-pyside6.md  ADR-004-partition-layout.md  ADR-005-thread-model.md  ADR-006-contract-calendar.md  ADR-007-public-api.md  ADR-007a-public-api-redesign.md  ADR-008-dll-distribution.md  ADR-009-build-determinism.md  ADR-010-logging-strategy.md  ADR-011-exception-hierarchy.md  ADR-012-configuration.md  ADR-013-observability.md  ADR-014-test-strategy.md  ADR-015-multiprocess-catalog.md  ADR-016-code-signing.md  ADR-017-auto-updater.md  ADR-018-frozen-mode-boundary.md  ADR-019-schema-as-contract.md  ADR-020-volume-completeness.md  ADR-021-sys-frozen-contract.md  ADR-022-single-session-sequential-policy.md  ADR-023-uniform-chunk-policy-1d.md  ADR-024-catalog-internal-directory.md  ADR-025-parquet-per-day-hybrid.md  ADR-026-storage-atomicity-recovery.md  ADR-027-ci-pipeline-strategy.md  ADR-028-contract-vigent-resolution-policy.md  ADR-029-ui-defer-vs-worker.md  ADR-030-protocol-first-boundary-policy.md  README.md
docs/debt/: DEBT-001-pre-commit-hooks-encoding.md  DEBT-002-bootstrap-dll-syntax.md  QUIRKS_HISTORICAL_2026-05-05.md  QUIRKS_INDEX.md  QUIRKS_OPEN_P1_2026-05-05.md
docs/decisions/: COUNCIL-01-secret-hook-false-positives.md  COUNCIL-02-parquet-writer-streaming-overhead.md  COUNCIL-03-history-callback-v2.md  COUNCIL-04-pandas-for-business-days.md  COUNCIL-05-orchestrator-core-design.md  COUNCIL-06-rollover-policy-vigent-until.md  COUNCIL-07-contracts-design-decisions.md  COUNCIL-08-cli-microcopy-uma-review.md  COUNCIL-09-mvp-gate-without-real-smoke.md  COUNCIL-10-perf-optimization-roadmap.md  COUNCIL-11-vectorized-writer-signoff.md  COUNCIL-12-epic3-prep.md  COUNCIL-13-epic4-prep.md  COUNCIL-14-schema-migration-framework.md  COUNCIL-15-prometheus-exporter-v2.md  COUNCIL-16-holidays-dat-integration.md  COUNCIL-17-exception-hierarchy-h10-cancel.md  COUNCIL-18-test-strategy-adr-014-implementation.md  COUNCIL-19-logging-strategy-impl.md  COUNCIL-20-retry-circuit-breaker.md  COUNCIL-21-storage-pareto-defaults.md  COUNCIL-22-cov-fix.md  COUNCIL-23-epic3-first-screen.md  COUNCIL-24-epic3-catalog-settings.md  COUNCIL-25-multi-symbol-broker-impl.md  COUNCIL-26-epic3-theming-metrics.md  COUNCIL-27-public-api-v1-release.md  COUNCIL-28-v1-release-readiness.md  COUNCIL-29-multi-asset-impl.md  COUNCIL-30-packaging-v1-release.md  COUNCIL-31-Quinn-gaps-completude-2026-05-05.md  COUNCIL-31-smoke-executor-role-autonomous.md  COUNCIL-32-Nelo-agents-trade-types-2026-05-05.md  COUNCIL-33-Pyro-eficiencia-2026-05-05.md  COUNCIL-34-Aria-arquitetura-sintoma-A-2026-05-05.md  COUNCIL-35-Sol-documentacao-2026-05-05.md  COUNCIL-36-Pax-release-blockers-2026-05-05.md  COUNCIL-37-Quinn-volume-gap-2026-05-05.md  COUNCIL-38-Nelo-download-flow-audit-2026-05-05.md  COUNCIL-39-Aria-revisao-critica-2026-05-05.md  (+5 more)
docs/dev/: CI_VALIDATION.md
docs/dll/: HOLIDAYS_DAT_FORMAT.md  OPEN_QUESTIONS_RESPONSES.md  PROFITDLL_KNOWLEDGE.md  QUIRKS.md
docs/epics/: EPIC-1-foundation.md  EPIC-2-quality-perf.md  EPIC-3-desktop-ui.md  EPIC-4-multi-asset-api.md
docs/perf/: BASELINES.md  COVERAGE_WORKAROUND.md  HOT_PATH_RULES.md  OPEN_QUESTIONS.md  REGRESSION_BUDGETS.md  TARGETS_V1.md
docs/public_api/: DEPRECATION_POLICY.md  USAGE.md
docs/qa/: CODE_RABBIT_INTEGRATION.md  INVARIANTS_TESTS.md  KNOWN-TEST-FAILURES-v1.1.0.md  KNOWN-TEST-FAILURES-v1.2.0.md  MANUAL_SMOKE_v1.1.0.md  RELEASE-GATE-v1.1.0-RESULTS.md  SMOKE_PROTOCOL.md  TEST_PYRAMID.md  V1.1.0-FIX-PLAN.md  V1.2.0-PLAN.md  V1.3.0-PLAN.md  release-gate-v1.1.0.md
docs/release/: AUDIT.md  BOOTSTRAP_PROTOCOL.md  BRANCH_MODEL.md  CODERABBIT_DECISION.md  INSTALL.md  RELEASES.md
docs/release-notes/: v1.1.0-draft.md  v1.1.1.md  v1.2.0.md  v1.3.0.md
docs/storage/: CONTRACTS.md  INTEGRITY.md  MIGRATIONS.md  QUERIES.md  SCHEMA.md
docs/stories/: 0.0.story.md  0.1.story.md  0.2.story.md  0.3.story.md  0.4.story.md  1.1.story.md  1.2.story.md  1.3.story.md  1.4.5.story.md  1.4.story.md  1.5.story.md  1.5b.story.md  1.6.story.md  1.7-DEPRECATED.story.md  1.7a.story.md  1.7b-followup.story.md  1.7b.story.md  1.7c.story.md  1.7d.story.md  1.7g.story.md  1.8-followup.story.md  1.8.story.md  2.1.story.md  2.10.story.md  2.11.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.5.story.md  2.6.story.md  2.7.story.md  2.8.story.md  2.9.story.md  3.1.story.md  3.2.story.md  3.3.story.md  4.1-followup.story.md  4.1.story.md  4.10-dead-buttons-integrity-reconcile.story.md  4.11-dll-status-realtime-after-credentials.story.md  (+27 more)
docs/ux/: CLI_PATTERNS.md  FLOWS.md  MICROCOPY_CATALOG.md  PRINCIPLES.md  QT_PATTERNS.md  (+2 more)
installer/: .gitignore  data_downloader.iss
scripts/: audit_hot_path.py  bootstrap-dll.ps1  build-icon.py  build_release.py  github_release.py  probe_history_minimal.py  probe_history_petr4.py  probe_history_wdok26.py  probe_init.py  probe_multi_process_license.py  probe_win_vigency_calendar.py  probe_wrapper_minimal.py  run_smoke_real_standalone.py  verify-dll-companions.py
tests/: conftest.py
(+405 files in other folders)
