[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data_downloader"
version = "1.0.0"
description = "Downloader de histórico de ativos via ProfitDLL — fundação para projetos futuros"
requires-python = ">=3.12"
authors = [{name = "Squad data-downloader"}]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # Story 2.1 — pandas para business-days B3 + classificação de gap.
    # Decisão COUNCIL-04 (Sol+Aria mini-council 2026-05-04): aceitar
    # pandas como dep transversal em vez de implementar do zero.
    "pandas>=2.0",
    # Story 2.4 — Prometheus exporter V2 (counters/gauges/histograms).
    # Autorização: ADR-013 §Decisão (Opção A). Increment lock-free O(1)
    # garante hot-path safe (R21). HTTP exporter é opt-in via --metrics-port.
    "prometheus_client>=0.20",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "hypothesis>=6.99",
    # Story 3.1+ — UI tests headless (Felix + Quinn).
    "pytest-qt>=4.4",
]
dev = [
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.5.0",
    "detect-secrets>=1.5.0",
]
ui = [
    "PySide6>=6.6",
]
build = [
    "pyinstaller>=6.4",
]

[project.scripts]
data-downloader = "data_downloader.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/data_downloader"]

# =====================================================================
# ruff — lint + format
# =====================================================================
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = [
    "profitdll/Exemplo *",
    "profitdll/Manual",
    "profitdll/Imagens",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # asserts permitidos em tests

# =====================================================================
# mypy — type-check estrito
# =====================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["data_downloader.ui.*"]
ignore_errors = true  # UI é Felix; type-check separado quando Story 3.x

[[tool.mypy.overrides]]
# pyarrow e duckdb não fornecem py.typed marker — silenciar.
module = ["pyarrow", "pyarrow.*", "duckdb", "duckdb.*"]
ignore_missing_imports = true

# =====================================================================
# pytest
# =====================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
pythonpath = ["src"]
markers = [
    "smoke: smoke tests (rápidos, sem dependências externas)",
    "unit: unit tests",
    "integration: integration tests (requer fixtures)",
    "property: property-based tests (Hypothesis)",
]

# =====================================================================
# coverage
# =====================================================================
[tool.coverage.run]
source = ["src/data_downloader"]
omit = ["src/data_downloader/ui/*"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
